--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -43,3 +44,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### AWS Lambda
+template-out.yml
